==> QizhiHe-Release/ahrs_stm32/Core/Src/imu.cpp <==
#include "imu.h"
#include "main.h"
#include "i2c.h"
#include <cmath>
#define MAG_DATA_LEN 6
#define Kp 4.50f // proportional gain governs rate of convergence to accelerometer/magnetometer
#define Ki 1.00f // integral gain governs rate of convergence of gyroscope biases
#define rad2deg (180.0f / M_PI)
#define deg2rad (M_PI / 180.0f)
#define dig_T1 bmp280.T1
#define dig_T2 bmp280.T2
#define dig_T3 bmp280.T3
#define dig_P1 bmp280.P1
#define dig_P2 bmp280.P2
#define dig_P3 bmp280.P3
#define dig_P4 bmp280.P4
#define dig_P5 bmp280.P5
#define dig_P6 bmp280.P6
#define dig_P7 bmp280.P7
#define dig_P8 bmp280.P8
#define dig_P9 bmp280.P9
#define t_fine bmp280.T_fine
#define MSLP 101325 // Mean Sea Level Pressure = 1013.25 hPA (1hPa = 100Pa = 1mbar)

uint8_t ICM20948_BMP280::I2C_ReadOneByte(uint8_t DevAddr, uint8_t RegAddr)
{
    uint8_t u8Ret[1] = {0};
    HAL_I2C_Mem_Read(&hi2c3, DevAddr, RegAddr, I2C_MEMADD_SIZE_8BIT, u8Ret, 1, 1000);

    return u8Ret[0];
}

void ICM20948_BMP280::I2C_WriteOneByte(uint8_t DevAddr, uint8_t RegAddr, uint8_t value)
{
    uint8_t buf[2] = {0};
    buf[0] = RegAddr;
    buf[1] = value;
    HAL_I2C_Master_Transmit(&hi2c3, DevAddr, buf, 2, 100);
}
